<resources>
    <string name="app_name">OTTOhub</string>
    <string name="ACD_BufferingView">缓冲中</string>
    <string name="ACD_ControllerRoot">播放控制</string>
    <string name="ACD_ControllerView">控制栏</string>
    <string name="ACD_DanmakuInputView">弹幕输入</string>
    <string name="ACD_DanmakuView">弹幕区</string>
    <string name="ACD_LockView">锁定</string>
    <string name="ACD_PreloadingView">载入中</string>
    <string name="ACD_Underlay">触控区</string>
    <string name="ACD_VideoRoot">视频播放器</string>
    <string name="ACD_VideoView">视频画面</string>
    <string name="PlayerBreakPoint_continue_play">继续播放</string>
    <string name="PlayerController_tips_lock_player">锁屏</string>
    <string name="PlayerController_tips_send_danmaku">发射弹幕</string>
    <string name="PlayerController_tips_toggle_aspect_ratio">视频比例</string>
    <string name="PlayerController_tips_toggle_danmaku">弹幕开关</string>
    <string name="PlayerController_toast_message_aspect_ratio_16_9_inside">16 : 9</string>
    <string name="PlayerController_toast_message_aspect_ratio_4_3_inside">4 : 3</string>
    <string name="PlayerController_toast_message_aspect_ratio_adjust_content">适应视频</string>
    <string name="PlayerController_toast_message_aspect_ratio_adjust_screen">适应屏幕</string>
    <string name="PlayerController_toast_message_brightness_state_fmt">亮度 : %02d%%</string>
    <string name="PlayerController_toast_message_danmaku_state_hidden">关闭弹幕</string>
    <string name="PlayerController_toast_message_danmaku_state_visible">显示弹幕</string>
    <string name="PlayerController_toast_message_pause">暂停</string>
    <string name="PlayerController_toast_message_play">播放</string>
    <string name="PlayerController_toast_message_play_progress_fmt">%1$s/%2$s\n%3$s秒</string>
    <string name="PlayerController_toast_message_volume_state_fmt">音量 : %02d%%</string>
    <string name="PlayerReactTips_retry_loading">重试</string>
    <string name="Player_danmaku_options_pannel_options_title_block_bottom">底部</string>
    <string name="Player_danmaku_options_pannel_options_title_block_colorful">彩色</string>
    <string name="Player_danmaku_options_pannel_options_title_block_rl">滚动</string>
    <string name="Player_danmaku_options_pannel_options_title_block_top">顶部</string>
    <string name="Player_danmaku_options_pannel_options_title_block_tourist">游客</string>
    <string name="Player_danmaku_options_pannel_title">弹幕控制</string>
    <string name="Player_danmaku_options_pannel_title_danmaku_block">弹幕屏蔽</string>
    <string name="Player_danmaku_options_pannel_title_danmaku_duplicate_merging_enable">合并同屏重复弹幕</string>
    <string name="Player_danmaku_options_pannel_title_danmaku_max_on_screen">同屏密度</string>
    <string name="Player_danmaku_options_pannel_title_danmaku_speed_factor">速度调节</string>
    <string name="Player_danmaku_options_pannel_title_danmaku_stroke_width_scaling">描边/阴影大小</string>
    <string name="Player_danmaku_options_pannel_title_danmaku_textsize">字号缩放</string>
    <string name="Player_danmaku_options_pannel_title_danmaku_transparency">弹幕透明度</string>
    <string name="Player_option_menu_change_screen_orientation">旋转屏幕</string>
    <string name="Player_option_menu_title_block">用户屏蔽</string>
    <string name="Player_option_menu_title_danmaku">弹幕设置</string>
    <string name="Player_option_menu_title_info">视频信息</string>
    <string name="Player_option_menu_title_player"></string>
    <string name="Player_options_title_action_loop">洗脑循环</string>
    <string name="Player_options_title_action_next">自动换P</string>
    <string name="Player_options_title_action_next_loop">自动换P(循环)</string>
    <string name="Player_options_title_action_pause">播完暂停</string>
    <string name="Player_options_title_action_quit">播完退出</string>
    <string name="Player_options_title_auto_rotation">重力自动旋屏</string>
    <string name="Player_options_title_enable_gesture">启用播放手势</string>
    <string name="Player_options_title_keep_background">背景恢复播放</string>
    <string name="Player_options_title_portrait_rotation">允许旋转至竖屏</string>
    <string name="Player_playback_options_pannel_title">播放控制</string>
    <string name="Player_settings_decoder">解码方式</string>
    <string name="Player_settings_ijk_player">软件解码器</string>
    <string name="Player_settings_system_player">系统硬解</string>
    <string name="PreloadingView_press_back_to_exit">再次按后退可以结束播放</string>
    <string name="VideoView_buffering">正在缓冲...</string>
    <string name="VideoView_buffering_long_time">缓冲不动了喵，休息~休息一下</string>
    <string name="VideoView_danmaku_input_hint">在这里输入弹幕</string>
    <string name="VideoView_page_list_selector">选集</string>
    <string name="VideoView_timed_text_split_char">/</string>
    <string name="activity_crash_report_5206">分享日志</string>
    <string name="activity_crash_report_590d">复制日志</string>
    <string name="activity_crash_report_5f88">很抱歉，程序遇到了一些问题。请复制下方日志并反馈给开发者，谢谢！</string>
    <string name="activity_crash_report_6b63">正在收集信息...</string>
    <string name="activity_crash_report_7a0b">程序崩溃</string>
    <string name="activity_crash_report_9000">退出页面</string>
    <string name="activity_decoder_settings_8fd4">返回</string>
    <string name="activity_decoder_settings_9009">选择</string>
    <string name="activity_device_info_590d">复制信息</string>
    <string name="activity_device_info_6b63">正在检测...</string>
    <string name="activity_device_info_8bbe">设备信息</string>
    <string name="activity_device_info_8fd4">返回</string>
    <string name="activity_device_info_8fd9">这设备...</string>
    <string name="activity_favorite_folder_list_6211">我的冷藏</string>
    <string name="activity_favorite_folder_list_6682">暂无冷藏夹</string>
    <string name="activity_favorite_video_list_6536">冷藏视频</string>
    <string name="activity_favorite_video_list_6682">暂无冷藏视频</string>
    <string name="activity_login_563f"></string>
    <string name="activity_login_767b">登录</string>
    <string name="activity_login_8fd4">返回</string>
    <string name="activity_metro_home_63a8">推荐视频</string>
    <string name="activity_metro_home_6b63">正在加载推荐视频...</string>
    <string name="activity_offline_53ef">可用 0 B / 共 0 B</string>
    <string name="activity_offline_6682">暂无离线视频</string>
    <string name="activity_offline_79bb">离线管理</string>
    <string name="activity_partition_detail_5206">分区</string>
    <string name="activity_partition_detail_8fd4">返回</string>
    <string name="activity_partition_detail_v3_5206">分区</string>
    <string name="activity_partition_detail_v3_8fd4">返回</string>
    <string name="activity_player_anim_6b63">正在努力缓冲中...</string>
    <string name="activity_reply_list_5168">全部回复</string>
    <string name="activity_reply_list_6682">暂无回复</string>
    <string name="activity_reply_list_8bc4">评论详情</string>
    <string name="activity_reply_list_8fd4">返回</string>
    <string name="activity_search_1_6682">暂无搜索结果</string>
    <string name="activity_search_563f"></string>
    <string name="activity_search_641c">搜索</string>
    <string name="activity_search_641c_1">搜索历史</string>
    <string name="activity_search_6682">暂无搜索历史</string>
    <string name="activity_search_6e05">清空</string>
    <string name="activity_search_8f93">输入关键词或视频 ID</string>
    <string name="activity_search_8fd4">返回</string>
    <string name="activity_settings_0210f24eff67"></string>
    <string name="activity_settings_04a462c6be4c">隐私模式</string>
    <string name="activity_settings_051d7a1c94bb">清除后下次启动会自动重新下载</string>
    <string name="activity_settings_125d656a0fd4">* 如果你需要在这些设备上使用竖屏模式，请取消勾选上方选项哦~</string>
    <string name="activity_settings_172484d5af24">点击检查</string>
    <string name="activity_settings_186be2232e2c">数据源</string>
    <string name="activity_settings_1d3fb4d6f727"></string>
    <string name="activity_settings_1f827b011ce1">自动横屏模式</string>
    <string name="activity_settings_1fe7d7f4e3de">解码性能调优: 循环滤波/跳帧/OpenSL</string>
    <string name="activity_settings_221c5ff1de8a">视频画质</string>
    <string name="activity_settings_22949cb603d7">Cookie导入/导出</string>
    <string name="activity_settings_31febe8b1081">无日志</string>
    <string name="activity_settings_3b89fd6b0ced">自动检测</string>
    <string name="activity_settings_3d39c5b7c001">随一个</string>
    <string name="activity_settings_4187d8f61b28">切换 SurfaceView / TextureView</string>
    <string name="activity_settings_46aaf464e9c4">IJK播放器</string>
    <string name="activity_settings_4c9273ccad7c">360P 流畅</string>
    <string name="activity_settings_4ea2688bdaa0">强制启用TV模式界面和横屏布局</string>
    <string name="activity_settings_5207_1">切换弹窗的外观主题</string>
    <string name="activity_settings_5207_2">切换界面的显示语言</string>
    <string name="activity_settings_5207_3">切换数据来源</string>
    <string name="activity_settings_52892bc824b2">崩溃日志</string>
    <string name="activity_settings_572cf45ba436">返回</string>
    <string name="activity_settings_591d8d54fac7">查看设备信息</string>
    <string name="activity_settings_59625e6f1259">图片加载线程</string>
    <string name="activity_settings_5ce0d161d888">不加载任何图片，仅显示文字内容，节省流量</string>
    <string name="activity_settings_5f39_1">弹窗样式</string>
    <string name="activity_settings_5f39_2">弹窗设置</string>
    <string name="activity_settings_5f6d02b89271">TV模式</string>
    <string name="activity_special_login_590d">复制</string>
    <string name="activity_special_login_624b">手动登录</string>
    <string name="activity_special_login_652f">支持格式：\n• 浏览器复制的 Cookie 字符串\n• JSON 格式 { &amp;amp;quot;cookies&amp;amp;quot;: &amp;amp;quot;...&amp;amp;quot; }\n• 任意包含 SESSDATA 的文本</string>
    <string name="activity_special_login_786e">确认登录</string>
    <string name="activity_special_login_8bf7">请输入JSON格式的登录信息：</string>
    <string name="activity_special_login_8fd4">返回</string>
    <string name="bili_about_4e00">一只毛子球</string>
    <string name="bili_about_4f01">企画</string>
    <string name="bili_about_539f">原作</string>
    <string name="bili_about_53cd">反馈群:</string>
    <string name="bili_about_53cd_1">Github Issues:</string>
    <string name="bili_about_5f00">开源项目</string>
    <string name="bili_about_662f">是真寻酱哒awa</string>
    <string name="bili_about_6c34">水渠-official</string>
    <string name="bili_about_6d41">流浪的猎人</string>
    <string name="bili_about_7279">协力</string>
    <string name="bili_about_76d1">监督</string>
    <string name="bili_about_7cfb">系统构成</string>
    <string name="bili_about_8001">K老余</string>
    <string name="bili_about_8d5e">协赞</string>
    <string name="bili_about_8f6f">制作</string>
    <string name="bili_about_9010">逐梦-3</string>
    <string name="bili_about_qq_group">754725037</string>
    <string name="bili_about_staff">STAFF</string>
    <string name="bili_about_9bishi">⑨bishi</string>
    <string name="bili_about_skyler1n">Skyler1n</string>
    <string name="bili_about_bbcallen">bbcallen</string>
    <string name="bili_about_os_ijkplayer">https://github.com/bilibili/ijkplayer</string>
    <string name="bili_about_os_biliclient">https://gitee.com/RobinNotBad/BiliClient</string>
    <string name="bili_about_os_wristbilibili">https://github.com/luern0313/WristBilibili</string>
    <string name="bili_about_os_bilitv_repair">https://github.com/qidian55/bilibilitv1.6.6-repair</string>
    <string name="bili_about_os_danmaku">https://github.com/bilibili/DanmakuFlameMaster</string>
    <string name="bili_about_os_api_collect">https://github.com/bilibili-plugins/bilibili-api-collect</string>
    <string name="bili_about_cctyl">cctyl</string>
    <string name="bili_about_xiaosuyang">小蘇陽</string>
    <string name="bili_about_wcxawa">wcxawa</string>
    <string name="bili_about_moreixima">moreixima</string>
    <string name="bili_about_liumu">六木视觉</string>
    <string name="bili_about_chuichui">锤锤的总督</string>
    <string name="bili_about_nullnanerror">NullNanError</string>
    <string name="bili_about_mongou666">mongou666</string>
    <string name="bili_about_biribili_user">ビリビリ_User</string>
    <string name="bili_about_mc_windows">MC-Windows1145</string>
    <string name="bili_about_steven_rong">Steven-Rong</string>
    <string name="bili_about_budong">不懂普通话的科技控</string>
</resources>